src/test/deca/context/valid/personalTests/testContextObjetAttributs4.deca
// Test la declaration d'un objet avec un bloc d'initialisation

class A {
    int a;
    void m(int m, int n) {
        println(m);
        println(n);
    }
}

{
    A a;
    a = new A();
    a.m(12,13);
    println("ok");
}