src/test/deca/context/invalid/personalTests/DeclVarVoid.deca
class A{
    int a;
    int b;

    int set(int a, int a){
        this.a = a;
        this.b = b;
    }
}

{
    A a = new A();
    a.set(1,2);
}